Fixed a font CSS rule with the wrong font family name and some minor changes to the Next Steps email.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -205,7 +205,7 @@ body#index a:hover,
 	height: 36px;
 	margin-top: -10px;
 	line-height: 42px;
-	font-family: Squares Bold;
+	font-family: Squares;
 	letter-spacing: 1px;
 	font-size: 1.2em;
 	transition: all .3s;
